--- a/web-developer.html
+++ b/web-developer.html
@@ -38,6 +38,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://rakuten.referrals.selectminds.com/jobs/web-ui-designer-new-service-development-9710'>Web/UI designer - New service development - Rakuten Careers</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-28</p>
+<hr/>
 <h5><a href='https://1871.workable.com/j/438902BECE'>1871 Member Companies - Jobs: Full Stack Web Developer (PHP) - Black Spectacles - Apply online</a></h5> 
 <p><span class="badge badge-light">Chicago, Illinois, United States Chicago, IL Minneapolis</span></p>
 <p>Posted on: 2019-07-27</p>
@@ -70,7 +74,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/DRCVideoProductions/743999692399098-web-application-developer'>DRC Video Productions Web Application Developer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/DRCVideoProductions/743999692399098-web-application-developer'>DRC Video Productions Web Application Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Concord Canada</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -181,7 +185,7 @@ M?nster (published: 11.01.2019). Apply now or check the other available jobs.</p
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/EASYRECRUE/743999692221932-senior-web-developer'>EASYRECRUE Senior Web Developer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/EASYRECRUE/743999692221932-senior-web-developer'>EASYRECRUE Senior Web Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -205,7 +209,7 @@ M?nster (published: 11.01.2019). Apply now or check the other available jobs.</p
 <p><span class="badge badge-light">Bangalore</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/silver-peak/job/on2zafwS'>Silver Peak Systems Careers - Senior Web Application Developer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/silver-peak/job/on2zafwS'>Silver Peak Systems Careers - Senior Web Application Developer</a></h5> 
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -262,7 +266,7 @@ Rails) to stabilize and expand our AI platform. AIcrowd (www.aicrowd.com) is a?.
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/mozilla/jobs/1788488'>Job Application for Senior Full Stack Web Developer at Mozilla</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/mozilla/jobs/1788488'>Job Application for Senior Full Stack Web Developer at Mozilla</a></h5> 
 <p><span class="badge badge-light">San Francisco Mountain View Vancouver Toronto London Paris Berlin Denver Canada</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -297,7 +301,7 @@ a full team of technology professionals to take projects from design specs to?..
 <p>3 days ago ... Full Stack Developer. Job ID 2019-1565. Technology New York, New York. Apply
 . Description. Medscape, a division of WebMD, develops and hosts physician?...</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/iponweb/job/oVbtafwt'>IPONWEB Careers - Front-End Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/iponweb/job/oVbtafwt'>IPONWEB Careers - Front-End Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>1 day ago ... Front-End Developer. Moscow, Russian Federation. Apply. Description. 
 Responsibilities: Implement a next-generation user interface using latest 
@@ -321,7 +325,7 @@ researches configuration of Solr search engines and the Solr query language.</p>
 <p><span class="badge badge-light">France</span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
-<h5><a href='http://pitchup.applytojob.com/apply/vZh66VBWxZ/Python-Web-Developer'>Python web developer - Pitchup.com - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://pitchup.applytojob.com/apply/vZh66VBWxZ/Python-Web-Developer'>Python web developer - Pitchup.com - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
@@ -394,7 +398,7 @@ Web Developer to join our busy and dynamic team based in our Dublin service?...<
 <p><span class="badge badge-light">Seattle Seattle</span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/bluebeam/jobs/1779462'>Job Application for Web Developer, Creative Marketing at Bluebeam, Inc.</a></h5> 
+<h5><a href='https://boards.greenhouse.io/bluebeam/jobs/1779462'>Job Application for Web Developer, Creative Marketing at Bluebeam, Inc.</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
@@ -459,12 +463,6 @@ w/m/d) in M?nster (published: 28.05.2019). Apply now or check the other?...</p>
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/MindMaze/743999686938995-front-end-web-developer'>MindMaze Front End Web Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Lausanne, Switzerland</span></p>
-<p>Posted on: 2019-07-18</p>
-<hr/>
-<h5><a href='https://limetray.recruiterbox.com/jobs/fk03m14/'>
-    Web Developer at Limetray
-</a></h5> 
-<p><span class="badge badge-light">Gurugram, Haryana</span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
 
